# opencv_pose_estimation

./: CMakeLists.txt  README.md
data/: pnp_t.txt  pnp_theta.txt
include/: GetDistanceOf2linesIn3D.h  PNPSolver.h
src/: PNPSolver.cpp  main1.cpp  main2.cpp  main3.cpp
相机位姿估计1：根据四个特征点估计相机姿态/: main1.cpp~  poseEstima.cpp
